Changes to my first repository

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Eric Gomez Investigations LLC</h1>
-<p>This is the investigation services of Eric gomez</p>
+<p>This is the investigation services of Eric Gomez</p>
 
 </body>
 </html>
