--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <h1>Eric Gomez Investigations LLC</h1>
-<p>This is the investigation services of Eric Gomez</p>
+<p>"Discrete yet efficient!"</p>
+<p>Eric Gomez Investigations LLC is owned and oppersated by a reputable and well trained individual with 26 years of experience in law enforcement with a heavy emphasis in traing to safegaurd lives and property.</p>
 
 </body>
 </html>
