--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -7,7 +7,13 @@
 <body>
 <h1>Eric Gomez Investigations LLC</h1>
 <p>"Discrete yet efficient!"</p>
-<p>Eric Gomez Investigations LLC is owned and oppersated by a reputable and well trained individual with 26 years of experience in law enforcement with a heavy emphasis in traing to safegaurd lives and property.</p>
+<p>Eric Gomez Investigations LLC is owned and operated by a reputable and well trained individual with 26 years
+of experience in law enforcement with a heavy emphasis in training to safegaurd lives and property.
+Conact information
+(303)253-1918
+<a href="ericgomezinvestigatinsllc@gmail.com"></a>
+</p>
+
 
 </body>
 </html>
