--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 	<h1>Eric Gomez Investigations LLC</h1>
-	<p>Eric Gomez Investugations LLC is owned and opperated by a reputable and well trained 
+	<p>"Discrete yet efficient!"</p>
+	<p>Eric Gomez Investigations LLC is owned and operated by a reputable and well trained 
 individual with 27 years of experience in law enforcement with a heavy emphasis in training
-to safegaurd lives and property.<br> Conact information<br>(303)253-1918</p>
+to safegaurd lives and property.<br> Conact information<br>(303)253-1918<br>
+<a href="ericgomezinvestigationsllc@gmail.com"></a></p>
 
 </body>
 </html>
