Edits to unit_3\index.html

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -8,8 +8,16 @@
 	<p>"Discrete yet efficient!"</p>
 	<p>Eric Gomez Investigations LLC is owned and operated by a reputable and well trained 
 individual with 27 years of experience in law enforcement with a heavy emphasis in training
-to safegaurd lives and property.<br> Conact information<br>(303)253-1918<br>
-<a href="ericgomezinvestigationsllc@gmail.com"></a></p>
+to safegaurd lives and property.<br> Services that will be provided are 
+<ul><li>
+Company holiday gatherings</li><li>
+Employment terminations</li><li>
+Surveillance</li><li>
+Personal Protection/Court_Hearing Escort/Event Escort</li><li>
+Property Protection/Housing Development Security/Small Item Delivery</li><li>
+Mising Persons/Case Review</li></ul>
+Conact information<br>(303)253-1918<br>
+<a href="mailto:ericgomezinvestigationsllc@gmail.com"></a></p>
 
 </body>
 </html>
