--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -4,20 +4,26 @@
 	<title>Eric Gomez Investigations LLC</title>
 </head>
 <body>
-	<h1>Eric Gomez Investigations LLC</h1>
-	<p>"Discrete yet efficient!"</p>
-	<p>Eric Gomez Investigations LLC is owned and operated by a reputable and well trained 
+	
+	<h1 style="text-align: center;">Eric Gomez Investigations LLC</h1>
+	<p style="text-align: center;">Discrete yet efficient!</p>
+	<p style="text-align: center;">Eric Gomez Investigations LLC is owned and operated by a reputable and well trained<br>
 individual with 27 years of experience in law enforcement with a heavy emphasis in training
-to safegaurd lives and property.<br> Services that will be provided are 
-<ul><li>
-Company holiday gatherings</li><li>
-Employment terminations</li><li>
-Surveillance</li><li>
-Personal Protection/Court_Hearing Escort/Event Escort</li><li>
-Property Protection/Housing Development Security/Small Item Delivery</li><li>
-Mising Persons/Case Review</li></ul>
-Conact information<br>(303)253-1918<br>
-<a href="mailto:ericgomezinvestigationsllc@gmail.com"></a></p>
+to safegaurd lives and property.</p>
+
+	<h2 style="text-align: center;"> Services that will be provided are</h2>
+	<p style="text-align: center;">
+	<li style="text-align: center;">
+Company holiday gatherings</li><li style="text-align: center;">
+Employment terminations</li><li style="text-align: center;">
+Surveillance</li><li style="text-align: center;">
+Personal Protection/Court_Hearing Escort/Event Escort</li><li style="text-align: center;">
+Property Protection/Housing Development Security/Small Item Delivery</li><li style="text-align: center;">
+Missing Persons/Case Review</li></p>
+
+	<h3 style="text-align:center;">Contact information:</h3>
+	<p style="text-align: center;">(303)253-1918 <br>
+	<a href="#"></a></p>
 
 </body>
 </html>
