--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,7 +7,7 @@
 	
 	<h1 style="text-align: center;">Eric Gomez Investigations LLC</h1>
 	<p style="text-align: center;">Discrete yet efficient!</p>
-	<img src="unit_3\images\Sunset_Rockies.jpeg" alt="Sunset_Rockies" title="Sunset">
+	<img src="unit_3\images\Sunset_Rockies.jpg" alt="Sunset_Rockies" title="Sunset">
 	<p style="text-align: center;">Eric Gomez Investigations LLC is owned and operated by a reputable and well trained<br>
 individual with 27 years of experience in law enforcement with a heavy emphasis in training
 to safegaurd lives and property.</p>
