--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,27 +5,38 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	
-	<h1 style="text-align: center;">Eric Gomez Investigations LLC</h1>
-	<p style="text-align: center;">Discrete yet efficient!</p>
-	<img src="unit_3\images\Sunset_Rockies.jpg" alt="Sunset_Rockies" title="Sunset">
-	<p style="text-align: center;">Eric Gomez Investigations LLC is owned and operated by a reputable and well trained<br>
-individual with 27 years of experience in law enforcement with a heavy emphasis in training
-to safegaurd lives and property.</p>
-
-	<h2 style="text-align: center;"> Services that will be provided are</h2>
-	<p style="text-align: center;">
-	<li style="text-align: center;">
-Company holiday gatherings</li><li style="text-align: center;">
-Employment terminations</li><li style="text-align: center;">
-Surveillance</li><li style="text-align: center;">
-Personal Protection/Court_Hearing Escort/Event Escort</li><li style="text-align: center;">
-Property Protection/Housing Development Security/Small Item Delivery</li><li style="text-align: center;">
-Missing Persons/Case Review</li></p>
-
-	<h3 style="text-align:center;">Contact information:</h3>
-	<p style="text-align: center;">(303)253-1918 <br>
-	<a href="#"></a></p>
-
+	<header>
+		<p class="logo">Eric Gomez Investigations LLC</p>
+		<nav>
+			<a href="#">Link 1</a>
+			<a href="#">Link 2</a>
+			<a href="#">Link 3</a>
+			<a href="#">Link 4</a>
+		</nav>
+	</header>
+	<section id="intro">
+		<h1>Eric Gomez Investigations LLC</h1>
+		<p>Discrete yet efficient!</p>
+		<a href="#" class="cta">do something</a>
+	</section>
+	<section id="about">
+		<p>Eric Gomez Investigations LLC is owned and operated by a reputable and well trained individual with 27 years of experience in law enforcement with a heavy emphasis in training to safegaurd lives and property.</p>
+	</section>
+	<section id="services">
+		<h2>Services that will be provided are</h2>
+		<ul>
+			<li>Company holiday gatherings</li>
+			<li>Employment terminations</li>
+			<li>Surveillance</li>
+			<li>Personal Protection/Court_Hearing Escort/Event Escort</li>
+			<li>Property Protection/Housing Development Security/Small Item Delivery</li>
+			<li>Missing Persons/Case Review</li>
+		</ul>
+	</section>
+	<section id="contact">
+		<h2>Contact information:</h2>
+		<p>(303)253-1918</p>
+		<a href="mailto:youremail@domain.com">youremail@domain.com</a>
+	</section>
 </body>
 </html>
