--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -34,11 +34,10 @@
 	</section>
 
 	<section id="about">
-
-		<p>Eric Gomez is a reputable and well trained individual with 27 years of experience in law enforcement with a heavy emphasis in training to safegaurd lives and property.</p>
-		<p>My approach to each case is professional as well as confidential. Eric Gomez understands that each case presents a unique challenge which may require a more delicate and personal touch. At Eric Gomez Investigations LLC, you can be confident that he will strive to achieve the best outcome for you.<p>
-		<p>Eric Gomez can assure to investigate and get you the answeres you need as thoroughly and quickly as possible!</p>
-
+		
+			<p>Eric Gomez is a reputable and well trained individual with 27 years of experience in law enforcement with a heavy emphasis in training to safegaurd lives and property.</p>
+			<p>His approach to each case is professional as well as confidential. Eric Gomez understands that each case presents a unique challenge which may require a more delicate and personal touch. At Eric Gomez Investigations LLC, you can be confident that he will strive to achieve the best outcome for you.</p>
+		
 	</section>
 
 	<section id="services">
@@ -53,9 +52,25 @@
 		</ul>
     
     </section>
+
+    <section id="sales">
+    	<p>Eric Gomez can assure to investigate and get you the answeres you need as thoroughly and quickly as possible!</p>
+	</section>
 	<section id="contact">
 		<h2>Contact information:</h2>
 		<p>(303)253-1918</p>
+	<div class="container">
+		<form action="#">
+			<label for="frame">First Name</label>
+			<input type="text" id="frame" name="firstname" placeholder="Your name..">
+			<label for="lname">Last Name</label>
+			<input type="text" id="lname" name="lastname" placeholder="Your last name..">
+			<label for="Subject"></label>
+			<textarea id="subject" name="subject" placeholder="Write something.."></textarea>
+			<input type="submit" value="submit">
+		</form>
+		
+	</div>
 		
 	</section>
 
