icon/text updates to unit_6

--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -35,8 +35,8 @@
 
 	<section id="about">
 		
-			<p>Eric Gomez is a reputable and well trained individual with 27 years of experience in law enforcement with a heavy emphasis in training to safegaurd lives and property.</p>
-			<p>His approach to each case is professional as well as confidential. Eric Gomez understands that each case presents a unique challenge which may require a more delicate and personal touch. At Eric Gomez Investigations LLC, you can be confident that he will strive to achieve the best outcome for you.</p>
+			<p class="main">Eric Gomez is a reputable and well trained individual with 27 years of experience in law enforcement with a heavy emphasis in training to safegaurd lives and property.</p>
+			<p class="approach">His approach to each case is professional as well as confidential. Eric Gomez understands that each case presents a unique challenge which may require a more delicate and personal touch. At Eric Gomez Investigations LLC, you can be confident that he will strive to achieve the best outcome for you.</p>
 		
 	</section>
 
@@ -50,6 +50,7 @@
 			<li>Property Protection/Housing Development Security/Small Item Delivery</li>
 			<li>Missing Persons/Case Review</li>
 		</ul>
+		<img src="images/camera2.png"> <img src="images/silhouette2.png"> <img src="images/surveilance2.png">
     
     </section>
 
