--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -33,7 +33,7 @@
 
 	</section>
 
-	<section id="about">
+	<section id="about" class="clearfix">
 
 			<p class="main">Eric Gomez is a reputable and well trained individual with 27 years of experience in law enforcement with a heavy emphasis in training to safegaurd lives and property.</p>
 			<p class="approach">His approach to each case is professional as well as confidential. Eric Gomez understands that each case presents a unique challenge which may require a more delicate and personal touch. At Eric Gomez Investigations LLC, you can be confident that he will strive to achieve the best outcome for you.</p>
@@ -48,7 +48,7 @@
 			<li>Property Protection/Housing Development Security/Small Item Delivery</li>
 			<li>Missing Persons/Case Review</li>
 		</ul>
-		<img src="images/camera2.png"> <img src="images/silhouette2.png"> <img src="images/surveilance2.png">
+		<img src="images/Camera2.png"> <img src="images/Silhouette2.png"> <img src="images/Surveilance2.png">
     
     </section>
 
