--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -15,12 +15,12 @@
 
 	<header>
 		<p class="logo">Eric Gomez Investigations LLC</p>
+		<img src="Violagene.github.io/unit_6/images/logo-1.png">
 
 		<nav>
-			<a href="#">Link 1</a>
-			<a href="#">Link 2</a>
-			<a href="#">Link 3</a>
-			<a href="#">Link 4</a>
+			<a href="#">About</a>
+			<a href="#">Services</a>
+			<a href="#">Contact</a>
 		</nav>
 
 	</header>
