--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -17,9 +17,9 @@
 		<img src="images/logo-1.png">
 
 		<nav>
-			<a href="#">About</a>
-			<a href="#">Services</a>
-			<a href="#">Contact</a>
+			<a href="#about">About</a>
+			<a href="#services">Services</a>
+			<a href="#contact">Contact</a>
 		</nav>
 
 	</header>
@@ -65,7 +65,7 @@
 			<input type="text" id="lname" name="lastname" placeholder="Your last name..">
 			<label for="Subject"></label>
 			<textarea id="subject" name="subject" placeholder="Write something.."></textarea>
-			<input type="submit" value="submit">
+			<input type="submit" value="submit" class="cta">
 		</form>
 		
 	</div>
