--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -38,7 +38,7 @@
 			<p class="approach">His approach to each case is professional as well as confidential. Eric Gomez understands that each case presents a unique challenge which may require a more delicate and personal touch. At Eric Gomez Investigations LLC, you can be confident that he will strive to achieve the best outcome for you.</p>
 	</section>
 
-	<section id="services">
+	<section id="services" class="clearfix">
 		<h2>Since 1996, Eric Gomez has provided a wide variety of security and services to clients throughout Denver and the surrounding communities</h2>
 		<ul>
             <li>Employment terminations</li>
