--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -47,7 +47,7 @@
 			<li>Property Protection/Housing Development Security/Small Item Delivery</li>
 			<li>Missing Persons/Case Review</li>
 		</ul>
-		<img src="images/Camera2.png"> <img src="images/Silhouette2.png"> <img src="images/Surveilance2.png">
+		<img src="images/camera2.png"> <img src="images/silhouette2.png"> <img src="images/Surveilance2.png">
     
     </section>
 
