--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -57,8 +57,8 @@
 	<section id="contact">
 		<h2>Contact information:</h2>
 		<p>(303)253-1918</p>
-	<div class="container">
-		<form action="#">
+	
+		<form action="#" class="container">
 			<label for="frame">First Name</label>
 			<input type="text" id="frame" name="firstname" placeholder="Your name..">
 			<label for="lname">Last Name</label>
@@ -67,8 +67,6 @@
 			<textarea id="subject" name="subject" placeholder="Write something.."></textarea>
 			<input type="submit" value="submit" class="cta">
 		</form>
-		
-	</div>
 		
 	</section>
 
