--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -55,14 +55,14 @@
         <p>Eric Gomez can assure to investigate and get you the answeres you need as thoroughly and quickly as possible!</p>
     </section>
     <section id="contact">
-        <h2>Contact information:</h2>
+        <h2>Contact Me:</h2>
         <p>(303)253-1918</p>
     
         <form action="#" class="container">
-            <label for="frame">First Name</label>
-            <input type="text" id="frame" name="firstname" placeholder="Your name..">
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            <label for="frame">Name</label>
+            <input type="text" id="frame" name="Name" placeholder="Your name..">
+            <label for="Email">e-mail</label>
+            <input type="text" id="Email" name="Email" placeholder="Your e-mail..">
             <label for="Subject"></label>
             <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
             <input type="submit" value="submit" class="cta">
