--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -7,6 +7,8 @@
     <title>Eric Gomez Investigations LLC</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
 </head>
 
@@ -14,7 +16,7 @@
 
     <header>
         <p class="logo">Eric Gomez Investigations LLC</p>
-        <img src="images/logo-1.png">
+        <img src="images/logo-1.png" alt="Logo">
 
         <nav>
             <a href="#about">About</a>
@@ -47,7 +49,7 @@
             <li>Property Protection/Housing Development Security/Small Item Delivery</li>
             <li>Missing Persons/Case Review</li>
         </ul>
-        <img src="images/camera2.png"> <img src="images/silhouette2.png"> <img src="images/Surveilance2.png">
+        <img src="images/camera2.png" alt="camera"> <img src="images/silhouette2.png" alt="silhouette"> <img src="images/Surveilance2.png" alt="Surveilance">
     
     </section>
 
